--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,9 +12,27 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.iconWrap {
+  width: 110px;
+  height: 110px;
+  background-color: rgba(128, 128, 128, 0.5);
+  border-radius: 5px;
+  border: 1px solid rgba(170, 170, 170, 0.8);
+}
 .iconOfApp {
   width: 100px;
   height: 100px;
+  padding: 5px;
+}
+.iconGrid {
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 30px;
+  justify-content: center;
+  max-width: 650px;
+  max-height: 650px;
 }
 .App-header {
   background-color: #282c34;
